Fixed the player visibility

--- a/src/main/resources/static/css/music-player.css
+++ b/src/main/resources/static/css/music-player.css
@@ -117,19 +117,6 @@
     margin-left: 15px;
 }
 
-/*.music-player > .dash > .seeker > .wheel > .progress {*/
-/*    position: absolute;*/
-/*    bottom: -14px;*/
-/*    left: 50%;*/
-/*    width: 392px;*/
-/*    height: 392px;*/
-/*    overflow: hidden;*/
-/*    margin: 0 0 0 -196px;*/
-/*    border-radius: 100%;*/
-/*    transform-origin: center;*/
-/*    transform: rotate(0deg);*/
-/*}*/
-
 .music-player > .dash > a[href="#seek"] {
     display: block;
     position: absolute;
@@ -257,16 +244,4 @@
     font-size: 10px;
 }
 
-.progress-dot {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    width: 15px;
-    height: 15px;
-    background-color: #fff;
-    border: 3px solid #252c36;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-    z-index: 10;
-}
+
